# NeuroVision-X

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  WHITEPAPER_OUTLINE.md  ci.yml  download_models.sh  environment.yml  healthcare_demo.md  industrial_safety_demo.md  prepare_data.py  pyproject.toml  requirements.txt  test_imports.py
