[project]
name = "neurovisionx"
version = "0.1.0"
description = "Foundation model for cross-modal perception and reasoning"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
